# coro-code

./: .gitignore  Cargo.toml  README.md  README_zh.md
cli/: Cargo.toml
cli/src/interactive/: task_executor.rs
cli/src/interactive/components/: input_section.rs
cli/src/interactive/file_search/: tests.rs
cli/src/tools/: bash.rs
core/: Cargo.toml
core/src/agent/: core.rs  mod.rs  state.rs
core/src/agent/tokens/: calculator.rs
core/src/llm/: message.rs
core/src/llm/providers/: anthropic.rs
core/src/trajectory/: recorder.rs
scripts/: publish-crates-io.bash
