[package]
name = "coro-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for coro-code - A high-performance AI coding agent"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tree-sitter = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
shellexpand = { workspace = true }
config = { workspace = true }
handlebars = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
which = { workspace = true }

# Core-specific dependencies
async-trait = "0.1"
regex = "1.0"
base64 = "0.22"
url = "2.0"
mime = "0.3"
tempfile = "3.0"
bytes = "1.0"
async-openai = "0.29"
jsonpath-rust = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
